# link_shortener_fastapi

./: .env-example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: bae845dbef93_create_url_table.py
api/: __init__.py
api/api_v1/: __init__.py
api/api_v1/urls/: __init__.py  crud.py  schemas.py  views.py
api/api_v1/utils/: __init__.py  helpers.py  validators.py
core/: __init__.py  config.py
core/models/: __init__.py  base.py  urls.py
db/: __init__.py  db_helper.py
