[tool.poetry]
name = "link-shortener"
version = "0.1.0"
description = "A service for generating short links"
authors = ["Kalpakchyan Liana <kalpakchyanliana@.gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = {extras = ["standart"], version = "^0.25.0"}
pydantic-settings = "^2.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.24"}
requests = "^2.31.0"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
